# aicommit

./: .env  .gitignore  CLAUDE.md  CNAME  Cargo.toml  LICENSE  REFACTORING.md  action.yml  decompose.py  features_to_do.md  fix_visibility.py  index.js  package.json  readme.md  rebuild.py  tarpaulin.toml  test_config.json  test_empty_message_fix.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  question.md
.github/workflows/: ai-commit-analyzer.yml.example  aicommit-example.yml  docs.yml  release.yml
.my/: features_todo.md
.my/test_project/: index.js  package.json
decomposition/: 000_struct_Cli.rs  001_function_increment_version.rs  002_function_update_version_file.rs  003_function_update_cargo_version.rs  004_function_update_npm_version.rs  005_function_update_github_version.rs  006_struct_OpenRouterConfig.rs  007_struct_ModelStats.rs  008_impl_impl_Default.rs  009_struct_SimpleFreeOpenRouterConfig.rs  00_imports.rs  010_struct_OllamaConfig.rs  011_struct_OpenAICompatibleConfig.rs  012_struct_ClaudeCodeConfig.rs  013_struct_OpenCodeConfig.rs  014_enum_ProviderConfig.rs  015_struct_Config.rs  016_function_default_retry_attempts.rs  017_impl_impl_Config.rs  018_function_setup_openrouter_provider.rs  019_function_setup_openai_compatible_provider.rs  01_constants.rs  020_function_process_git_diff_output.rs  021_function_get_safe_slice_length.rs  022_struct_UsageInfo.rs  023_struct_OpenRouterResponse.rs  024_struct_OpenRouterChoice.rs  025_struct_OpenRouterMessage.rs  026_struct_OpenRouterUsage.rs  027_function_parse_duration.rs  028_function_watch_and_commit.rs  029_function_main.rs  030_function_get_git_diff.rs  031_function_create_git_commit.rs  032_function_get_version.rs  033_function_dry_run.rs  034_function_run_commit.rs  035_function_get_available_free_models.rs  036_function_fallback_to_preferred_models.rs  037_function_find_best_available_model.rs  (+15 more)
docs/: astro.config.mjs  index.html  package-lock.json  styles.css
docs/wiki/: Development Guide.md  Tool Overview & Core Value.md
examples/: error-handling-usage.js  logging_example.rs  test_logging.rs
experiments/: logging_test_validation.md  test_claude_code.sh
lib/: error-handler.js  errors.js
old/: main.rs.backup
openrouter_models/: all_models.json  free_models.json  free_models.txt
src/: git.rs  hooks.rs  ignore.rs  lib.rs  logging.rs  main.rs  models.rs  providers.rs  types.rs  utils.rs  version.rs
tasks/: fix_readme_flowchart_syntax.md  update_readme_flowchart.md
test/: error-framework.test.js
tests/: README.md
tests/common/: mod.rs
tests/fixtures/: api_responses.json  sample_configs.json  sample_diffs.txt
tests/integration/: test_cli.rs
tests/unit/: test_core_utils.rs
vscode-extension/: .eslintrc.js  .vscodeignore  README.md  aicommit-vscode-0.1.0.vsix  build.sh  extension.js  package-lock.json  package.json  suenot-aicommit-vscode-0.1.0.vsix
(+51 files in other folders)
