[package]
name = "aicommit"
version = "0.1.1"
edition = "2021"
authors = ["Eugen Soloviov <suenot@gmail.com>"]
description = "A CLI tool that generates concise and descriptive git commit messages using LLMs"
readme = "readme.md"
repository = "https://github.com/suenot/aicommit"
license = "MIT"
keywords = ["git", "commit", "ai", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
dialoguer = "0.11"
console = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }